--- a/src/huypq.Crypto/project.json
+++ b/src/huypq.Crypto/project.json
@@ -2,7 +2,7 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.1.0-alpha1-21569",
+    "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.0.0",
     "NETStandard.Library": "1.6.0"
   },
 
